changes to logic(sorry)