@@ -1,7 +1,6 @@
 package com.absolutelyaryan.energy;
 
 import net.minecraft.core.component.DataComponentType;
-import net.minecraft.util.Mth;
 import net.minecraft.world.item.ItemStack;
 
 public class ItemEnergyStorage implements UniversalEnergyStorage {
@@ -55,7 +54,7 @@ public class ItemEnergyStorage implements UniversalEnergyStorage {
     public int insert(int amount, boolean simulate) {
         if (!canInsertEnergy()) return 0;
 
-        int toReceive = Math.min(maxReceive, Math.clamp(amount, 0, getMaxEnergy() - getEnergy()));
+        int toReceive = Math.clamp(this.capacity - getEnergy(), 0, Math.min(this.maxReceive, amount));
         if (!simulate)
             setEnergyStored(getEnergy() + toReceive);
 
@@ -66,7 +65,7 @@ public class ItemEnergyStorage implements UniversalEnergyStorage {
     public int extract(int amount, boolean simulate) {
         if (!canExtractEnergy()) return 0;
 
-        int toExtract = Math.min(maxExtract, Math.clamp(amount, 0, getEnergy()));
+        int toExtract = Math.min(getEnergy(), Math.min(this.maxExtract, amount));
         if (!simulate)
             setEnergyStored(getEnergy() - toExtract);
 
